--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -1,4 +1,10 @@
-/* TODO: These rules need to be broken up into the right files. */
+/*
+  Note:
+  This is only a demo for the SAAS compilation.
+  Your styles should probably be organized a little better.
+  Finally, some of these styles conflict with Bootstrap's styles.
+ */
+
 html, body {
   height: 100%;
   box-sizing: border-box;
